--- a/templates/page.html
+++ b/templates/page.html
@@ -4,6 +4,9 @@
         <title>Email Spam Detection</title>
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
         <style>
+            body {
+                background-color: lightgray;
+            }
             form, #result {
                 text-align: center;
             }
