--- a/templates/page.html
+++ b/templates/page.html
@@ -41,7 +41,7 @@
     
     <body>
         <center>
-        <h1>Email Spam Detection</h1>
+        <h1><a href="https://colab.research.google.com/drive/1inyQDNN9CBPAVnoMqxCPgItS0bEJeXpa?usp=sharing">Email Spam Detection</a></h1>
         <form>
             <input type="text" id="text" name="text">
             <input type="button" id="button" onclick="send()" value="Submit">
